<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
   	android:rowCount="7"  
    android:columnCount="4">
    
    <EditText android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"/>
    
    <Button android:id="@+id/button1"
        android:text="@string/one"
        android:layout_row="2"
        android:layout_column="0"/>
    
    <Button android:id="@+id/button2"
        android:text="@string/two"
        android:layout_row="2"
        android:layout_column="1"/>
    
    <Button android:id="@+id/button3"
        android:text="@string/three"
        android:layout_row="2"
        android:layout_column="2"/>
    
    <Button android:id="@+id/buttonDiv"
        android:text="@string/div"
        android:layout_row="2"
        android:layout_column="3"/>
    
    <Button android:id="@+id/button4"
        android:text="@string/four"
        android:layout_row="3"
        android:layout_column="0"/>
    
    <Button android:id="@+id/button5"
        android:text="@string/five"
        android:layout_row="3"
        android:layout_column="1"/>
    
    <Button android:id="@+id/button6"
        android:text="@string/six"
        android:layout_row="3"
        android:layout_column="2"/>
    
    <Button android:id="@+id/buttonMult"
        android:text="@string/mult"
        android:layout_row="3"
        android:layout_column="3"/>
    
     <Button android:id="@+id/button7"
        android:text="@string/seven"
        android:layout_row="4"
        android:layout_column="0"/>
    
    <Button android:id="@+id/button8"
        android:text="@string/eight"
        android:layout_row="4"
        android:layout_column="1"/>
    
    <Button android:id="@+id/button9"
        android:text="@string/nine"
        android:layout_row="4"
        android:layout_column="2"/>
    
    <Button android:id="@+id/buttonSub"
        android:text="@string/sub"
        android:layout_row="4"
        android:layout_column="3"/>
    
    <Button android:id="@+id/button0"
        android:text="@string/zero"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"/>
    
    <Button android:id="@+id/point"
        android:text="@string/point"
        android:layout_row="5"
        android:layout_column="2"/>
    
    <Button android:id="@+id/buttonPlus"
        android:text="@string/plus"
        android:layout_rowSpan="2"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_gravity="fill"/>
    
    <Button android:id="@+id/buttonEq"
        android:text="@string/eq"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="fill"/>
    
    <Button android:id="@+id/buttonDelete"
        android:text="@string/delete"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_gravity="fill"/>
    
</GridLayout>
