<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="horizontal">
    
    <TextView android:id="@+id/wenben"
        android:layout_width="wrap_content"
        android:text="@string/auther_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_row="0"
        android:layout_column="0"/>
    
    <EditText android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_row="0"
        android:layout_column="1"/>
    
    <TextView android:id="@+id/wenbenPSW"
        android:layout_width="wrap_content"
        android:text="@string/auther_psw"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_row="1"
        android:layout_column="0"/>
    
   	 <EditText android:id="@+id/passwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_row="1"
        android:layout_column="1"/>
    
   	 <CheckBox android:id="@+id/checkHidden"
   	     android:layout_width="100dp"
   	     android:layout_height="20dp"
   	     android:text="@string/hidden"
   	     android:layout_row="1"
       	 android:layout_column="2"/>"
   	 
    <Button android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/login" 
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:layout_row="2"
        android:layout_column="0"/>
    <ListView
	    android:id="@+id/lv"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_row="3"
        android:layout_column="0"/>
</GridLayout>
